--- a/main.html
+++ b/main.html
@@ -8,14 +8,25 @@
 <body>
 
   <div class="wrapper">
-    <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
-    <div class="speed">
-      <div class="speed-bar">1×</div>
+    <video class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+
+    <div class="controls">
+      <button class="player__button">►</button>
+      <button class="rewind">« 10s</button>
+      <button class="skip">25s »</button>
+
+      <input type="range" class="progress" value="0">
+      <div class="progress__filled"></div>
+
+      <input type="range" class="volume" value="100" min="0" max="100">
+      <input type="range" class="playbackSpeed" value="1" min="0.5" max="2" step="0.1">
+
+      <div class="speed">
+        <div class="speed-bar">1×</div>
+      </div>
     </div>
   </div>
 
-<script  src="./script.js">
-  //Your code goes here
-</script>
+<script src="script.js"></script>
 </body>
 </html>
