--- a/main.html
+++ b/main.html
@@ -2,31 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Video Speed Scrubber</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Custom Video Player</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="wrapper">
-    <video class="flex" width="765" height="430" src="https://www.w3schools.com/html/mov_bbb.mp4"></video>
+  <div class="video-container">
+    <video id="video" src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4" class="video-player" preload="metadata"></video>
 
     <div class="controls">
-      <button class="player__button">►</button>
-      <button class="rewind">« 10s</button>
-      <button class="skip">25s »</button>
+      <button id="rewind-10s">« 10s</button>
+      <button id="play-pause" class="player__button">►</button>
+      <button id="forward-25s">25s »</button>
 
-      <input type="range" class="progress" value="0">
-      <div class="progress__filled"></div>
-
-      <input type="range" class="volume" value="100" min="0" max="100">
-      <input type="range" class="playbackSpeed" value="1" min="0.5" max="2" step="0.1">
-
-      <div class="speed">
-        <div class="speed-bar">1×</div>
+      <div class="progress-bar-container">
+        <div class="progress__filled"></div>
       </div>
+
+      <label for="volume">Volume:</label>
+      <input id="volume" type="range" min="0" max="1" step="0.01" value="0.75">
+      
+      <label for="playbackSpeed">Speed:</label>
+      <input id="playbackSpeed" type="range" min="0.5" max="2" step="0.1" value="1">
     </div>
   </div>
 
-<script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
